web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-parameter4/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,26)
1|class x { static async f(await) {} }
 |                        ^
